# 8BitCPU

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json
roms/: fibonacci.rom  for_cycle.rom
roms/apple2/: RomDocs.md
source/: base.h  cpu.c  cpu.h  main.c  memory.c  memory.h
source/core/: addressing_mode.h  base.h  cpu.c  cpu.h  emulator.c  emulator.h  instr_implementations.c  instr_implementations.h  machine_interface.h  memory.c  memory.h  platform_interface.h
source/core/cpu/: cpu.c  cpu.h  instructions.c  instructions.h  instructions_data.c  opcodes.h
source/core/cpu/instructions/: arithmetic.c  arithmetic.h  branch.c  branch.h  compare.c  compare.h  flags.h  interrupts.c  interrupts.h  load_store.c  load_store.h  logical.c  logical.h  shifts.c  shifts.h  stack.c  stack.h  transfer.c  transfer.h
source/core/memory/: memory.c  memory.h
source/machine/: loader.h
source/machine/apple2/: apple2.c  apple2.h
source/platform/: loader.h
source/platform/apple2/: apple2.c  apple2.h
source/utils/: args.c  args.h  file_io.c  file_io.h  log.c  log.h  options.h
